samples/_failures_safe/1761410927_33af70_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_570701b2.c: In function ‘main’:
./samples/SAFE/__tmp_570701b2.c:168:16: error: missing terminating " character
  168 |         printf("
      |                ^
./samples/SAFE/__tmp_570701b2.c:168:9: error: expected expression at end of input
  168 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_570701b2.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_570701b2.c:168:9: error: expected declaration or statement at end of input
